<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgvalute"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/EdtToConvert"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="#1976D2"
        android:ems="10"
        android:hint="@string/ins_currency"
        android:inputType="number|textPersonName|text"
        android:textAlignment="center"
        android:textColor="#FBC02D"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.465"
        tools:text="@string/ins_currency" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="145dp"
        android:layout_height="42dp"
        android:text="@string/txtEur"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/EdtToConvert"
        app:layout_constraintHorizontal_bias="0.827"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.454" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="117dp"
        android:layout_height="40dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="64dp"
        android:text="@string/txtDollar"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt1"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/convertedCurrency"
        android:layout_width="75dp"
        android:layout_height="48dp"
        android:layout_marginTop="63dp"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.579"
        app:layout_constraintStart_toEndOf="@+id/txt2"
        app:layout_constraintTop_toBottomOf="@+id/EdtToConvert"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Btn"
        android:layout_width="116dp"
        android:layout_height="53dp"
        android:background="#D10221"
        android:onClick="convertValue"
        android:text="@string/Bt"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt2"
        app:layout_constraintVertical_bias="0.436"
        tools:text="Convert" />

    <ImageView
        android:id="@+id/imgChange"
        android:layout_width="48dp"
        android:layout_height="76dp"
        android:contentDescription="@string/imgC"
        android:onClick="exchange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.584"
        app:srcCompat="@drawable/change" />

</android.support.constraint.ConstraintLayout>